# DelegateCaller

./: .gitignore
C#/EventSample/: CoreBinding.cs  EventSample.csproj  Program.cs
C++/: CMakeLists.txt  Core.cpp  Core.h  CoreWrapper.cpp
